# PNetAI_Chatbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mongodb_all_schemas.json  pyproject.toml
data/: .gitkeep
doc/: developer-guide.md  phase-1-completion.md  phase-2-completion.md  phase-3-completion.md  phase-4-completion.md  phase-5-completion.md  phase-6-completion.md  phase-7-completion.md  qdrant-data-ingestion-planning.md  qdrant-data-ingestion-report.md  system-spec.md
scripts/: create_mongo_indexes.py  seed_vector_db.py
scripts/ingest/: parser.py  pipeline.py  splitter.py
src/petbot/: __init__.py
src/petbot/application/: __init__.py
src/petbot/application/dto/: __init__.py
src/petbot/application/ports/: __init__.py  history_repo_port.py  llm_port.py  mongo_query_port.py  session_repo_port.py  vector_store_port.py  web_search_port.py
src/petbot/application/services/: __init__.py
src/petbot/application/use_cases/: __init__.py
src/petbot/domain/: __init__.py
src/petbot/domain/entities/: __init__.py  message.py  session.py  tool_result.py  user.py
src/petbot/domain/enums/: __init__.py  role.py  tool_type.py  user_permission.py
src/petbot/domain/exceptions/: __init__.py  session.py  tool.py
src/petbot/domain/value_objects/: __init__.py  query.py  session_id.py
src/petbot/infrastructure/: __init__.py
src/petbot/infrastructure/agent/: __init__.py
src/petbot/infrastructure/config/: __init__.py  settings.py
src/petbot/infrastructure/llm/: __init__.py
src/petbot/infrastructure/persistence/: __init__.py
src/petbot/infrastructure/tools/: __init__.py
src/petbot/interface/: __init__.py
src/pnetai_chatbot/: main.py
src/pnetai_chatbot/domain/: __init__.py
src/pnetai_chatbot/infrastructure/: __init__.py
src/pnetai_chatbot/interface/: __init__.py
tests/integration/: conftest.py  test_chat_flow.py  test_session_persistence.py
tests/unit/domain/: test_message.py  test_session.py  test_user.py  test_value_objects.py
tests/unit/interface/: test_auth_middleware.py  test_chat_endpoint.py  test_health_endpoint.py  test_rate_limit_middleware.py  test_session_endpoints.py
(+108 files in other folders)
