[project]
name = "pnetai-chatbot"
version = "0.1.0"
description = "PetBot - AI Chatbot Server for Pet Social Network"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # API Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # AI / Agent
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
    "tavily-python>=0.5",
    # Vector DB
    "qdrant-client>=1.9",
    # Database
    "motor>=3.5",
    "pymongo>=4.8",
    # Config & Validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    # Auth
    "python-jose[cryptography]>=3.3",
    # Utilities
    "httpx>=0.27",
    "tenacity>=8.5",
    "structlog>=24.4",
    "pypdf>=6.12.2",
    "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (Google convention) — dùng trong ruff 0.11+
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "D203", # no-blank-line-before-class (conflict with D211)
    "D213", # multi-line-summary-second-line (Google style: first line is summary)
    "B008", # Do not perform function call `Depends` in argument defaults (standard for FastAPI)
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pnetai_chatbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
